* Fixed images at team page on mobile

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -162,3 +162,8 @@ footer {
     }
 }
 
+img.team {
+    @include media-query($on-palm) {
+        width: 33%;
+    }
+}
